<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warna_background"
    tools:context=".view.profile.ProfileActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvArraowDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/rounded_bg_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/string_todo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/statusBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/string_profile"
        android:textAlignment="center"
        android:textColor="@color/warna_primary_font"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivSetImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_pic_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <TextView
        android:id="@+id/tvNamauser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_nama_user"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/warna_primary_font"
        app:layout_constraintTop_toBottomOf="@+id/ivSetImage" />

    <TextView
        android:id="@+id/tvEmailuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/string_email_gmail_com"
        android:textAlignment="center"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/warna_second_button"
        app:layout_constraintTop_toBottomOf="@+id/tvNamauser" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintAkun"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@drawable/bg_half_rounded_light"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailuser">

        <TextView
            android:id="@+id/tvAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/string_akun"
            android:textColor="@color/warna_primary_font"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/line_content"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/string_todo"
            android:src="@drawable/line_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAkun" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_bg_third"
            android:textColor="@color/warna_primary_font"
            android:textColorHint="@color/warna_secondary_font"
            app:boxStrokeColor="@color/warna_background"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/warna_primary_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_content"
            app:shapeAppearanceOverlay="@style/Button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/string_masukkan_nomor_handphone"
                android:inputType="phone"
                android:textColor="@color/warna_secondary_font"
                android:textColorHint="@color/warna_primary_font"
                android:textSize="18sp"
                android:textStyle="normal"
                app:boxStrokeWidth="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constDate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_bg_third"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

            <TextView
                android:id="@+id/tvTgllahir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/string_masukkan_tanggal_lahir"
                android:textColor="@color/warna_secondary_font"
                android:textColorHint="@color/warna_primary_font"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivCalender"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/string_todo"
                android:src="@drawable/ic_baseline_calendar_month_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constChoseeCity"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_bg_third"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/constDate">

            <EditText
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/rounded_bg_third"
                android:hint="@string/string_masukkan_kota_anda"
                android:inputType="text"
                android:textColor="@color/warna_secondary_font"
                android:textColorHint="@color/warna_primary_font"
                android:textSize="18sp"
                android:textStyle="normal"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnSimpan"
            style="@style/firstbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="10dp"
            android:text="@string/string_simpan_profile"
            app:layout_constraintBottom_toTopOf="@+id/tvPrivacyPolicy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/string_privacy_policy"
            android:textColor="@color/warna_second_button"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>